--- a/APIclima/Canvas/index.html
+++ b/APIclima/Canvas/index.html
@@ -1,28 +1,58 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Patito Dibujado</title>
-  <script src="script.js" defer></script>
-  <style>
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #87CEEB; /* Color cielo */
-    }
 
-    #canvas {
-      border: 2px solid #000;
-    }
-  </style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <title>API Clima</title>
+    <style>
+
+        body{
+            width: 100wh;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            height: 100vh;
+            display: grid;
+            place-items: center;
+            background-color: aqua;
+            text-align: center;
+        }
+        .container{
+            width: 70%;
+            text-align: center;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            background-color:rgba(0, 0, 0, 0.8);
+            color: white;
+            border-radius: 20px;
+            padding: 40px 20px;
+        }
+
+
+
+    </style>
 </head>
 <body>
-  <canvas id="canvas" width="400" height="400"></canvas>
-</body>
+    <div class="container">
+        <div>
+            <h1>API de Clima</h1>
+            <hr>
+            <div class="wheater">
+                <h2></h2>
+                <h2 id="emoji"></h2>
+            </div>
+        </div>
+        <div>
+            <h1>Ubica tu Localidad</h1>
+            <hr>
+            <label for="city" class="form-label">Encuentra tu Ciudad</label>
+            <input type="text" class="form-control" id="city" placeholder="Ciudad">
+            <button class="btn btn-outline-primary" id="btncity">Buscar</button>
+        </div>
     </div>
-    <script src="./dibujo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./app.js"></script>
+    
+</body>
 </html>
